--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
             android:exported="false"
             android:screenOrientation="portrait"/>
         <activity android:name=".ui.EscanearTiendaActivity" />
+
+        <activity android:name=".ui.ScannerTiendaActivity" />
+
         <activity
             android:name=".ui.LoginActivity"
             android:exported="true">
